flask.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: flask-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: flask-app
  template:
    metadata:
      labels:
        app: flask-app
    spec:
      containers:
      - name: flask
        image: 207086112514.dkr.ecr.us-east-1.amazonaws.com/app 
        ports:
        - containerPort: 5000


---
apiVersion: v1
kind: Service
metadata:
  name: flask-svc
  labels:
spec:
  ports:
  - port: 80
    targetPort: 5000
    protocol: TCP
  selector:
    app: flask-app
