micro-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: micro-ingress
  namespace: default
spec:
  rules:
    - host: flask.pythoner.click
      http:
        paths:
          - backend:
              serviceName: flask-svc
              servicePort: 80
